--- a/JiakSiMi/app/src/main/AndroidManifest.xml
+++ b/JiakSiMi/app/src/main/AndroidManifest.xml
@@ -1,32 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android = "http://schemas.android.com/apk/res/android"
-    package = "com.phoenix.jiaksimi" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.phoenix.jiaksimi">
 
     <application
-        android:allowBackup = "true"
-        android:icon = "@mipmap/ic_launcher"
-        android:label = "@string/app_name"
-        android:roundIcon = "@mipmap/ic_launcher_round"
-        android:supportsRtl = "true"
-        android:theme = "@style/AppTheme" >
-        <activity android:name = ".FoodList" >
-            <meta-data
-                android:name = "android.support.PARENT_ACTIVITY"
-                android:value = ".Lobby" />
-        </activity >
-        <activity android:name = ".FoodListAdder" >
-            <meta-data
-                android:name = "android.support.PARENT_ACTIVITY"
-                android:value = ".FoodList" />
-        </activity >
-        <activity android:name = ".Lobby" />
-        <activity android:name = ".Loader" >
-            <intent-filter >
-                <action android:name = "android.intent.action.MAIN" />
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".Loader">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+    </application>
 
-                <category android:name = "android.intent.category.LAUNCHER" />
-            </intent-filter >
-        </activity >
-    </application >
-
-</manifest >
+</manifest>
